<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UserLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login:</string>
    <string name="Password">Password</string>
    <string name="BtnEntrar">Entrar</string>
    <string name="login">Usuario registrado correctamente</string>
    <string name="usuario">Usuario:</string>
    <string name="pass">Password:</string>
    <string name="logout">Usuario o contraseña incorrectos</string>
    <string name="intento">Vuelve a intentarlo.....</string>

</resources>